--- a/2 - Pre-process Data.ipynb
+++ b/2 - Pre-process Data.ipynb
@@ -112,7 +112,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dvc remote add --default google_drive \\\n",
+    "                           gdrive://1LxJDdr5B5uWUXk2q1oK6a3Twxj_Sn4o2\n",
+    "dvc remote modify google_drive gdrive_acknowledge_abuse true"
+   ]
   }
  ],
  "metadata": {
