--- a/2 - Pre-process Data.ipynb
+++ b/2 - Pre-process Data.ipynb
@@ -42,11 +42,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df['HighCholCheck'] = df['CholCheck'] + df['HighChol']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rearranged = [\n",
     "    'Sex', 'Age',\n",
     "    'Fruits', 'Veggies','HvyAlcoholConsump',\n",
     "    'BMI', 'PhysActivity', 'DiffWalk', 'GenHlth', 'MentHlth', 'PhysHlth', \n",
-    "    'CholCheck', 'HighChol', 'HighBP', 'Smoker', 'Stroke', 'HeartDiseaseorAttack',\n",
+    "    'HighCholCheck', 'HighBP', 'Smoker', 'Stroke', 'HeartDiseaseorAttack',\n",
     "    'AnyHealthcare', 'NoDocbcCost',\n",
     "    'Education', 'Income',\n",
     "    'Diabetes_binary'\n",
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Set Saved: 22 Columns x 45242 Rows\n",
-      "Testing Set Saved: 22 Columns x 14139 Rows\n",
-      "Validation Set Saved: 22 Columns x 11311 Rows\n"
+      "Training Set Saved: 23 Columns x 45242 Rows\n",
+      "Testing Set Saved: 23 Columns x 14139 Rows\n",
+      "Validation Set Saved: 23 Columns x 11311 Rows\n"
      ]
     }
    ],
@@ -106,6 +115,13 @@
     "val_set[rearranged].to_csv('Data/TTV Split/validation.csv', index=False)\n",
     "print(f'Validation Set Saved: {len(val_set.columns)} Columns x {len(val_set)} Rows')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
