--- a/M1 - Linear Regression.ipynb
+++ b/M1 - Linear Regression.ipynb
@@ -129,9 +129,9 @@
     }
    ],
    "source": [
-    "for i in range(len(ths)):\n",
-    "    if accs[i] > 0.7535:\n",
-    "        print(f'- Threshold: {ths[i]:.3f} | Accuracy: {accs[i]:.3f} | Precision: {precs[i]:.3f} | Recall: {recs[i]:.3f}')"
+    "# for i in range(len(ths)):\n",
+    "#     if accs[i] > 0.7535:\n",
+    "#         print(f'- Threshold: {ths[i]:.3f} | Accuracy: {accs[i]:.3f} | Precision: {precs[i]:.3f} | Recall: {recs[i]:.3f}')"
    ]
   },
   {
