--- a/M3 - Deep Neural Network.ipynb
+++ b/M3 - Deep Neural Network.ipynb
@@ -503,6 +503,92 @@
         "print(\"Best Parameters:\", grid_result.best_params_)\n",
         "print(\"Best Score:\", grid_result.best_score_)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Fit the data on the best model returned and evaluate performance."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# build the best model\n",
+        "best_model = grid_result.best_estimator_\n",
+        "\n",
+        "opt = grid_result.best_params_['optimizer']\n",
+        "if opt == 'Adam':\n",
+        "    optimizer = Adam(learning_rate=grid_result.best_params_['learning_rate'])\n",
+        "elif opt == 'SGD':\n",
+        "    optimier = SGD(learning_rate=grid_result.best_params_['learning_rate'])\n",
+        "elif opt == 'Adadelta':\n",
+        "    optimizer = Adadelta(learning_rate=grid_result.best_params_['learning_rate'])\n",
+        "\n",
+        "best_model.compile(\n",
+        "        optimizer=optimizer,  \n",
+        "        loss='binary_crossentropy',  \n",
+        "        metrics=['accuracy']  \n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_model.fit(train_x,\n",
+        "          train_y,\n",
+        "          epochs=20, \n",
+        "          validation_data=(val_x, val_y))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "test_loss, test_acc = best_model.evaluate(test_x, test_y)\n",
+        "print(\"Testing loss:\", test_loss)\n",
+        "print(\"Testing accuracy:\", test_acc)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_pred = (best_model.predict(test_x) > optimal_threshold).astype(int)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cm = confusion_matrix(test_y, y_pred)\n",
+        "print(\"Confusion Matrix:\")\n",
+        "disp = ConfusionMatrixDisplay(cm)\n",
+        "disp.plot()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"Classification Report:\")\n",
+        "print(classification_report(test_y, y_pred))"
+      ]
     }
   ],
   "metadata": {
