--- a/M3 - Deep Neural Network.ipynb
+++ b/M3 - Deep Neural Network.ipynb
@@ -32,7 +32,6 @@
         "from keras.layers import Dense, Dropout\n",
         "from keras.callbacks import EarlyStopping\n",
         "from keras.optimizers import Adam, SGD, Adadelta\n",
-        "from scikeras.wrappers import KerasClassifier\n",
         "\n",
         "from alive_progress import alive_it\n",
         "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
@@ -92,7 +91,7 @@
         "                 optimizer=Adam,\n",
         "                 learning_rate=0.01):\n",
         "    model = Sequential([\n",
-        "        Dense(64, activation=activation, input_shape=(51,)), # (train_x.shape[1],)\n",
+        "        Dense(64, activation=activation, shape=(51,)),\n",
         "        Dropout(dropout_rate),  \n",
         "        Dense(64, activation=activation),  \n",
         "        Dropout(dropout_rate),  \n",
@@ -122,23 +121,8 @@
         "    'dropout_rate': [0.1, 0.2, 0.3],\n",
         "    'optimizer': [Adam, SGD, Adadelta],  \n",
         "    'learning_rate': [0.005, 0.01]  \n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "72\n"
-          ]
-        }
-      ],
-      "source": [
+        "}\n",
+        "\n",
         "param_configs = [\n",
         "    {\n",
         "        'activation': activation,\n",
@@ -226,7 +210,7 @@
         }
       ],
       "source": [
-        "for i in alive_it(range(len(param_configs)), force_tty=True):   \n",
+        "for i in range(len(param_configs)):   \n",
         "    param_config = param_configs[i]\n",
         "    with mlflow.start_run(experiment_id=mlflow_experiment_id):\n",
         "        for param, value in param_config.items():\n",
