Removed unnecessary imports

--- a/M2 - Decision Tree.ipynb
+++ b/M2 - Decision Tree.ipynb
@@ -16,7 +16,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import matplotlib.pyplot as plt"
    ]
