--- a/M3 - Deep Neural Network.ipynb
+++ b/M3 - Deep Neural Network.ipynb
@@ -39,7 +39,6 @@
         "\n",
         "from keras import Sequential\n",
         "from keras.layers import Dense, Dropout\n",
-        "from keras.callbacks import EarlyStopping\n",
         "from keras.optimizers import Adam, SGD, Adadelta\n",
         " \n",
         "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
@@ -76,25 +75,6 @@
       "outputs": [],
       "source": [
         "run = False"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "We apply early stopping to prevent overfitting."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "early_stopping = EarlyStopping(monitor='val_loss',\n",
-        "                               mode='min',\n",
-        "                               verbose=1,\n",
-        "                               patience=3)"
       ]
     },
     {
@@ -338,7 +318,7 @@
       ],
       "source": [
         "# list of possible threshold values\n",
-        "threshold_values = [i / 100 for i in range(10,95,5)]\n",
+        "threshold_values = [i / 100 for i in range(10, 95, 5)]\n",
         "\n",
         "# list to hold precision, recall, accuracy scores for each possible threshold value\n",
         "prec_scores = []\n",
